WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295012
[css-anchor-position-1] Chained anchors don't scroll with their anchor
https://bugs.webkit.org/show_bug.cgi?id=295012
Summary
[css-anchor-position-1] Chained anchors don't scroll with their anchor
fantasai
Reported
2025-06-25 20:30:35 PDT
Overview: When a box is anchored to a box which is itself anchored, we scroll adjust the box that is anchored directly to the anchor, but not the one directly anchored. Affected WPT Tests: *
http://wpt.live/css/css-anchor-position/anchor-scroll-chained-001.html
*
http://wpt.live/css/css-anchor-position/anchor-scroll-chained-002.html
*
http://wpt.live/css/css-anchor-position/anchor-scroll-chained-003.html
*
http://wpt.live/css/css-anchor-position/anchor-scroll-chained-004.html
*
http://wpt.live/css/css-anchor-position/anchor-scroll-chained-fallback.html
Implementation Notes: We should probably create a map from scroll containers to their scroll-adjusted boxes, which would let the scroll container adjust the affected boxes more directly, without needing to evaluate all the relationships involved. This would both make it easy to handle these cases and also be more performant.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-25 20:30:56 PDT
<
rdar://problem/154355127
>
Antti Koivisto
Comment 2
2025-07-08 10:20:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47722
EWS
Comment 3
2025-07-11 15:29:56 PDT
Committed
297286@main
(6e090026a7cd): <
https://commits.webkit.org/297286@main
> Reviewed commits have been landed. Closing PR #47722 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug