[css-anchor-position-1] Chained anchors don't scroll with their anchor https://bugs.webkit.org/show_bug.cgi?id=295012 rdar://154355127

Reviewed by Alan Baradlay.

* LayoutTests/TestExpectations:
* Source/WebCore/style/AnchorPositionEvaluator.cpp:
(WebCore::Style::AnchorPositionEvaluator::scrollOffsetFromAnchor):

The anchor may be scroll-compensated itself. Include these offsets recursively.
Recursion ends because anchors can't form cycles.

Canonical link: https://commits.webkit.org/297286@main